workhorse/gitops/emojivoto/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto-dev
  namespace: emojivoto-dev
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
spec:
  tls:
    - hosts:
        - emojivoto.dev.local
      secretName: emojivoto-dev
  ingressClassName: nginx
  rules:
  - host: emojivoto.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
